# chatbot_1

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
chroma_db/: chroma.sqlite3
knowledge/: user_preference.txt
src/chatbot_1/: crew.py  main.py
src/chatbot_1/config/: agents.yaml  tasks.yaml
src/chatbot_1/tools/: time_tool.py
streamlit-crewai-app/: app.py  test.py
tests/: chatbot_stt.py  elabchatbot.py
