[project]
name = "chatbot_1"
version = "0.1.0"
description = "chatbot-1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
chatbot_1 = "chatbot_1.main:run"
run_crew = "chatbot_1.main:run"
train = "chatbot_1.main:train"
replay = "chatbot_1.main:replay"
test = "chatbot_1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
